--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.20"
   }
 }
