--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon --exec ./node_modules/.bin/babel-node --harmony ./app.js --ignore backup/"
   },
   "author": "viyas",
   "license": "MIT",
@@ -16,13 +16,26 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/node": "^7.20.0",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/runtime": "^7.20.0",
+    "@types/express": "^4.17.14",
     "dotenv": "^16.0.2",
+    "eslint": "^8.27.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20"
   }
 }
+
