--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.4",
@@ -38,4 +39,3 @@
     "nodemon": "^2.0.20"
   }
 }
-
