--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.4",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "prettier": "^2.7.1"
