--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -41,3 +42,4 @@
     "nodemon": "^2.0.20"
   }
 }
+
